Make headless mode understand /path/to/file.

BUG=767314

Change-Id: If738ae440ae0adb1c266a21a09f2cba32d91724e
Reviewed-on: https://chromium-review.googlesource.com/696492
Reviewed-by: David Vallet <dvallet@chromium.org>
Commit-Queue: David Vallet <dvallet@chromium.org>
Cr-Commit-Position: refs/heads/master@{#506315}