headless/app/headless_shell.h
@@ -8,6 +8,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include <memory>
 #include <string>
+#include <vector>
 
 #include "base/files/file_proxy.h"
 #include "base/memory/weak_ptr.h"
@@ -22,6 +23,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "headless/public/headless_web_contents.h"
 #include "headless/public/util/deterministic_dispatcher.h"
 #include "net/base/file_stream.h"
+
+class GURL;
 
 namespace headless {
 
@@ -60,6 +63,8 @@ class HeadlessShell : public HeadlessWebContents::Observer,
   virtual void Shutdown();
 
   void FetchTimeout();
+
+  void OnGotURLs(const std::vector<GURL>& urls);
 
   void PollReadyState();
 
